<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@android:color/holo_blue_bright"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_toEndOf="@+id/imgPhoto"
                    android:gravity="center_horizontal"
                    android:text="@string/text_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toEndOf="@+id/imgPhoto"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvName"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/imgPhoto"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_username"
                    android:textColor="#FFEB3B"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imgPhoto"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@+id/tvUsername"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/imgPhoto"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintStart_toEndOf="@+id/imgPhoto"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                    app:tint="@android:color/holo_red_light"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUsername"
                    android:layout_toEndOf="@+id/location"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_location"
                    app:layout_constraintStart_toEndOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

                <ImageView
                    android:id="@+id/company"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@+id/location"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/imgPhoto"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_location_city_24"
                    app:layout_constraintStart_toEndOf="@+id/imgPhoto"
                    app:layout_constraintTop_toBottomOf="@+id/location"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLocation"
                    android:layout_toEndOf="@+id/company"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_company"
                    app:layout_constraintStart_toEndOf="@+id/company"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocation" />



                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_number"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textFollower"
                    app:layout_constraintEnd_toStartOf="@+id/textFollower"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textFollower" />

                <TextView
                    android:id="@+id/textFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_followers"
                    app:layout_constraintBottom_toBottomOf="@+id/tvFollowing"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvFollower"
                    app:layout_constraintTop_toTopOf="@+id/tvFollowing" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLocation"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/company"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_number"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textFollowing"
                    app:layout_constraintEnd_toStartOf="@+id/textFollowing"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textFollower"
                    app:layout_constraintTop_toTopOf="@+id/textFollowing" />

                <TextView
                    android:id="@+id/textFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_following"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRepository"
                    app:layout_constraintEnd_toStartOf="@+id/tvRepository"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvFollowing"
                    app:layout_constraintTop_toTopOf="@+id/tvRepository" />

                <TextView
                    android:id="@+id/tvRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_number"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textRepository"
                    app:layout_constraintEnd_toStartOf="@+id/textRepository"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textFollowing"
                    app:layout_constraintTop_toTopOf="@+id/textRepository" />

                <TextView
                    android:id="@+id/textRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/text_repo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvRepository"
                    app:layout_constraintTop_toBottomOf="@+id/imgPhoto" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>